--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "swiper": "^10.2.0",
     "vite-plugin-full-reload": "^1.0.5",
     "vite-plugin-html-inject": "^1.0.1"
   }
